examples of jdk17 and aja4j 2.0.0, add multiagent and langchain4j